cmake_minimum_required(VERSION 3.9)


# =============================================================================
# Project info
# =============================================================================

project("Discorde API")


# =============================================================================
# Projects
# =============================================================================

add_subdirectory(discorde-c-api)
add_subdirectory(discorde-cpp-api)

